Alignment fixed

--- a/src/css/inventory.css
+++ b/src/css/inventory.css
@@ -1,8 +1,7 @@
 /* INVENTORY */
 
 .side-btn-container {
-    display: flex;
-    width: 20%;
+    width: 5%;
   }
   
   .section-center {
@@ -39,6 +38,7 @@
     background: white;
     padding-bottom: 5px;
   }
+
   
   .truckLoad:hover {
     color: gray;
@@ -51,9 +51,23 @@
   
   .items {
     margin-bottom: 0;
+    justify-content: center;
+    /* text-align: center; */
     color: var(--dark);
     letter-spacing: 2px;
     transition: var(--transition);
+  }
+
+  .truck {
+    width: 30%;
+  }
+
+  .price {
+    width: 15%;
+  }
+
+  .contents {
+    width: 45%;
   }
   
   .edit-btn,
